tests/data/invalid/trailing_comma_array.extxyz
1
Properties=species:S:1:pos:R:3 tags=[a,b,]
H 0.0 0.0 0.0
